--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
     "start": "webpack-dev-server"
   },
   "dependencies": {
+    "adsr": "^1.0.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "kefir": "^3.8.0",
+    "mathjs": "^3.19.0",
     "regl": "^1.3.1",
+    "soundbank-reverb": "^1.1.2",
+    "sparkly": "^3.1.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   }
