--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-preset-env": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "kefir": "^3.8.0",
+    "lodash": "^4.17.4",
     "mathjs": "^3.19.0",
     "regl": "^1.3.1",
     "soundbank-reverb": "^1.1.2",
