--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
+  "name": "avio",
+  "author": "internetfriendsforever",
+  "main": "lib/avio.js",
+  "description": "audio video input output",
+  "version": "0.0.1",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --config webpack.config.example.js",
+    "build": "webpack"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-minify-webpack-plugin": "^0.2.0",
     "babel-preset-env": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "kefir": "^3.8.0",
