--- a/package.json
+++ b/package.json
@@ -13,17 +13,16 @@
     "build": "webpack"
   },
   "dependencies": {
+    "kefir": "^3.8.0",
+    "lodash": "^4.17.4",
+    "regl": "^1.3.1"
+  },
+  "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-minify-webpack-plugin": "^0.2.0",
     "babel-preset-env": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
-    "kefir": "^3.8.0",
-    "lodash": "^4.17.4",
-    "mathjs": "^3.19.0",
-    "regl": "^1.3.1",
-    "soundbank-reverb": "^1.1.2",
-    "sparkly": "^3.1.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   }
