--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "git+https://github.com/internetfriendsforever/avio.git"
   },
-  "main": "lib/avio.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "webpack-dev-server --config webpack.config.example.js",
     "build": "webpack"
