--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   },
   "dependencies": {
     "kefir": "^3.8.0",
-    "lodash": "^4.17.4",
-    "regl": "^1.3.1"
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
