--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.example.js",
+    "start": "webpack -w & open ./example/index.html",
     "build": "webpack"
   },
   "dependencies": {
@@ -22,7 +22,6 @@
     "babel-minify-webpack-plugin": "^0.2.0",
     "babel-preset-env": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7"
+    "webpack": "^3.10.0"
   }
 }
