--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "build": "NODE_ENV=production webpack"
   },
   "dependencies": {
-    "hammerjs": "^2.0.8",
     "kefir": "^3.8.0",
-    "wobble": "^1.5.0"
+    "wobble": "^1.5.0",
+    "zingtouch": "^1.0.5"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
