--- a/package.json
+++ b/package.json
@@ -3,27 +3,27 @@
   "version": "0.0.13",
   "description": "audio video input output",
   "author": "internetfriendsforever <anyone@internetfriendsforever.com>",
+  "main": "public/library/cjs.js",
+  "module": "public/library/esm.js",
+  "files": [
+    "public/library"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/internetfriendsforever/avio.git"
   },
-  "main": "lib/avio.min.js",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.example.js",
-    "build": "NODE_ENV=production webpack"
+    "build": "rollup -c",
+    "dev": "concurrently \"rollup -c -w\" \"http-server -c-1 public\""
   },
   "dependencies": {
     "hammerjs": "^2.0.8",
-    "kefir": "^3.8.0",
-    "wobble": "^1.5.0"
+    "kefir": "^3.8.6",
+    "wobble": "^1.5.1",
+    "rollup": "^1.27.14"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-minify-webpack-plugin": "^0.2.0",
-    "babel-preset-env": "^1.6.1",
-    "html-webpack-plugin": "^2.30.1",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1"
+    "concurrently": "^5.0.2",
+    "http-server": "^0.12.0",
   }
 }
